# chat_seguro

./: .env  .gitignore  DEPLOYMENT.md  README.md  README_PILARES.md  README_SECURITY.md  SECURITY_PLAN.md  pyproject.toml  railway.toml  railway_start.py  ruff.toml
chat_seguran_a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client/: chat_client_logic.py  key_store.py  persistence.py
server/: db_core.py  email_service.py  generate_cert.py  server.py  user_store.py  web_bridge.py
tests/: test_db_core.py  test_email_service.py  test_persistence.py  test_persistence_manual.py  test_security_pillars.py  test_server_runtime.py  test_user_store.py  test_web_bridge.py
web-app/: MULTIPLOS_CLIENTES.md  README.md  index.html  package-lock.json  package.json  start-clients.ps1  start-clients.sh  tailwind.config.js  vite.config.js
web-app/src/: App.jsx  config.js  index.css
web-app/src/components/: ChatInterface.jsx  ChatWindow.jsx  ConversationList.jsx  CreateGroupModal.jsx  Login.jsx
